force-app/main/default/objects/QA_Test_Execution__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00ND0000001rflFMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>