force-app/main/default/objects/QA_Test_Execution__c/fields/Bugs__c.field-meta.xml
<CustomField>
    <fullName>Bugs__c</fullName>
    <description>Comma separated list of bugs associated to this test execution</description>
    <inlineHelpText>Comma separated list of bugs associated to this test execution</inlineHelpText>
    <label>Bugs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>