force-app/main/default/objects/QA_Test_Execution__c/fields/Build_of_Last_Execution__c.field-meta.xml
<CustomField>
    <fullName>Build_of_Last_Execution__c</fullName>
    <label>Build # of Last Execution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>