force-app/main/default/objects/QA_Test_Execution__c/fields/Number_of_Executions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Executions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Executions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>