force-app/main/default/objects/QA_Test_Execution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>planned: the test will be executed some point in the future
in progress: test has started, result is not ready yet
passed: test executed and passed
failed: test executed and failed
blocked: test execution cannot progress until obstacles are removed</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#FFFF66</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Passed</fullName>
                <color>#419249</color>
                <label>Passed</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <color>#FF0000</color>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#FF6600</color>
                <label>Blocked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>