force-app/main/default/objects/QA_Test_Execution__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <description>Specifies the parent Test Case object.</description>
    <label>Test Case</label>
    <referenceTo>QA_Test_Case__c</referenceTo>
    <relationshipLabel>Test Executions</relationshipLabel>
    <relationshipName>Test_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>