force-app/main/default/objects/QA_Test_Execution__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Test Executions (User Story)</relationshipLabel>
    <relationshipName>TestExecutions2</relationshipName>
    <type>Lookup</type>
</CustomField>