force-app/main/default/objects/QA_Test_Execution__c/validationRules/Assignee_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignee_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Assignee__c )</errorConditionFormula>
    <errorDisplayField>Assignee__c</errorDisplayField>
    <errorMessage>Test Execution Insert|Update Error: Assignee is mandatory to insert|update a test execution record.</errorMessage>
</ValidationRule>