force-app/main/default/objects/QA_Test_Execution__c/validationRules/Correct_status_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_status_value</fullName>
    <active>true</active>
    <description>Status has to be: Planned, In progress, Passed, Failed, or Blocked</description>
    <errorConditionFormula>NOT(OR(
   ISPICKVAL(Status__c, &quot;Planned&quot;),
   ISPICKVAL(Status__c, &quot;In Progress&quot;),
   ISPICKVAL(Status__c, &quot;Passed&quot;),
   ISPICKVAL(Status__c, &quot;Failed&quot;),
   ISPICKVAL(Status__c, &quot;Blocked&quot;)))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status has to be: Planned, In progress, Passed, Failed, or Blocked</errorMessage>
</ValidationRule>