force-app/main/default/objects/QA_Test_Execution__c/validationRules/Needed_if_Status_is_passed_or_failed.validationRule-meta.xml
<ValidationRule>
    <fullName>Needed_if_Status_is_passed_or_failed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNULL(Date_of_Last_Execution__c ) ,
OR ( ISPICKVAL( Status__c , &quot;Passed&quot;) , ISPICKVAL( Status__c , &quot;Failed&quot;) )
)</errorConditionFormula>
    <errorMessage>Value needed for Date when Executed, since Status is Passed / Failed</errorMessage>
</ValidationRule>