force-app/main/default/objects/QA_Test_Execution__c/validationRules/User_story_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>User_story_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( User_Story__c )</errorConditionFormula>
    <errorDisplayField>User_Story__c</errorDisplayField>
    <errorMessage>Test Execution Insert|Update Error: User Story is mandatory to insert|update a test execution record.</errorMessage>
</ValidationRule>