force-app/main/default/objects/QA_Test_Execution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Case__c</columns>
    <columns>User_Story__c</columns>
    <columns>Assignee__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Bugs__c</columns>
    <columns>Date_of_Last_Execution__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>